# mdppet

./: Cargo.toml  readme.md
src/: main.rs  snip.rs
tests/: test_markdown.2.md  test_markdown_re_text.1.md
