[package]
name = "mdppet"
version = "0.1.1"
authors = ["zombie110year <zombie110year@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap ="^2"
regex = "^1"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
